k3s/manifests/backstitch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstitch
  namespace: backstitch
spec:
  type: ClusterIP
  selector:
    app: backstitch
  ports:
    - port: 3000
      targetPort: 3000
